# phaeton

./: CLAUDE.md  README.md  pyproject.toml
ai-agent/: pyproject.toml
ai-agent/src/phaeton_ai_agent/: __init__.py  agent.py  handler.py  models.py
ai-agent/tests/: __init__.py  conftest.py  test_agent.py  test_handler.py  test_models.py
deployment/: app.py  cdk.json  pyproject.toml
deployment/cdk.out/: PhaetonAiAgent.assets.json  PhaetonAiAgent.template.json  PhaetonOrchestration.assets.json  PhaetonOrchestration.template.json  PhaetonPackager.assets.json  PhaetonPackager.template.json  PhaetonReleaseParser.assets.json  PhaetonReleaseParser.template.json  PhaetonTranslationEngine.assets.json  PhaetonTranslationEngine.template.json  PhaetonWorkflowAnalyzer.assets.json  PhaetonWorkflowAnalyzer.template.json  manifest.json  tree.json
deployment/cdk.out/asset.0362a826ef902049606b28b6c7d17efceced34932ad17cd319ba50c14700a18a/n8n_release_parser/: catalog.py  cli.py  differ.py  matcher.py  models.py  parser.py  spec_index.py  storage.py
deployment/cdk.out/asset.210c440aba6a5f89b53ba8ae5119db543ab50dd0d5d307f780123b9ec8a7371b/phaeton_ai_agent/: agent.py  handler.py
deployment/cdk.out/asset.87ea6387c5aa11ff6c0e49fefae2b3cbbd0ced508a3a0d10b09d462eca31427b/workflow_analyzer/: __init__.py
deployment/cdk.out/asset.abb9ec9a265ac231c61c283421c654b2d0baf3fed81ab4d5e9372219455cf09a/n8n_to_sfn/: __init__.py  handler.py  items_adapter.py  validator.py
deployment/cdk.out/asset.b1aead438fac4f336cddce880b618059f63230f362e0231865b85e773a18864a/n8n_to_sfn_packager/: packager.py
deployment/cdk.out/asset.d7702a404106d10648f861be58d620712b343775b16d7462450047210e792bf8/: handler.py
deployment/functions/adapter/: handler.py
deployment/stacks/: __init__.py  ai_agent_stack.py  expression_translator_stack.py  node_translator_stack.py  orchestration_stack.py  packager_stack.py  release_parser_stack.py  spec_registry_stack.py  translation_engine_stack.py  workflow_analyzer_stack.py
deployment/tests/: __init__.py  test_synth.py
docs/: ai-agent.md  (+13 more)
n8n-release-parser/: CLAUDE.md  README.md  pyproject.toml
n8n-release-parser/src/n8n_release_parser/: __init__.py  cache.py  catalog.py  cli.py  fetcher.py  handler.py  matcher.py  models.py  parser.py  priority.py  service.py  spec_index.py  storage_s3.py
n8n-release-parser/tests/: __init__.py  conftest.py  test_catalog.py  test_cli.py  test_models.py  test_spec_index.py
n8n-release-parser/tests/integration/: __init__.py  test_pipeline.py
n8n-release-parser/tests/unit/: __init__.py  test_cache.py  test_catalog.py  test_cli.py  test_differ.py  test_fetcher.py  test_handler.py  test_matcher.py  test_models.py  test_parser.py  test_priority.py  test_service.py  test_spec_index.py  test_storage.py  test_storage_s3.py
n8n-to-sfn/: CLAUDE.md  README.md  pyproject.toml
n8n-to-sfn/src/n8n_to_sfn/: cli.py  engine.py  errors.py  handler.py  items_adapter.py
n8n-to-sfn/src/n8n_to_sfn/ai_agent/: client.py  fallback.py
n8n-to-sfn/src/n8n_to_sfn/models/: analysis.py  asl.py  n8n.py
n8n-to-sfn/src/n8n_to_sfn/translators/: __init__.py  aws_service.py  base.py  code_node.py  database.py  expression_evaluator.py  expressions.py  flow_control.py  http_request.py  picofun.py  picofun_bridge.py  picofun_operation_mapper.py  set_node.py  spec_fetcher.py  triggers.py  variables.py
n8n-to-sfn/tests/: __init__.py  conftest.py  test_ai_agent.py  test_ai_agent_client.py  test_aws_service.py  test_code_node.py  test_database_translator.py  test_engine.py  test_error_handling.py  test_expression_evaluator.py  test_expressions.py  test_flow_control.py  test_form_trigger.py  test_handler.py  test_http_request_translator.py  test_integration.py  test_items_adapter.py  test_loop_node.py  test_models.py  test_picofun.py  test_picofun_bridge.py  test_picofun_operation_mapper.py  test_rate_limiting.py  test_saas_translators.py  test_set_node_translator.py  test_spec_fetcher.py  test_triggers.py  test_validator.py  test_variables.py
n8n-to-sfn/tests/fixtures/: code_node_workflow.json  error_handling_workflow.json  if_branch_workflow.json  multi_step_etl.json  schedule_lambda_workflow.json  simple_s3_pipeline.json  wait_and_notify.json  webhook_to_dynamodb.json
packager/: CLAUDE.md  README.md  pyproject.toml
packager/scripts/: check.sh
packager/src/n8n_to_sfn_packager/: __init__.py  __main__.py  handler.py  packager.py
packager/src/n8n_to_sfn_packager/models/: __init__.py  inputs.py  ssm.py
packager/src/n8n_to_sfn_packager/writers/: asl_writer.py  cdk_writer.py  iam_writer.py  lambda_writer.py  picofun_writer.py  report_writer.py  ssm_writer.py
packager/tests/: __init__.py  test_asl_writer.py  test_cdk_writer.py  test_cdk_writer_picofun.py  test_cli.py  test_iam_writer.py  test_lambda_writer.py  test_models.py  test_packager_integration.py  test_picofun_writer.py  test_report_writer.py  test_ssm_writer.py
shared/phaeton-models/: CLAUDE.md  pyproject.toml
shared/phaeton-models/src/phaeton_models/: __init__.py  analyzer.py  confidence.py  n8n_workflow.py  packager_input.py  spec.py  translator.py  translator_output.py
shared/phaeton-models/tests/: __init__.py  test_adapter_analyzer_to_translator.py  test_adapter_translator_to_packager.py  test_n8n_workflow.py  test_packager_input.py
spec-registry/: CLAUDE.md  pyproject.toml
spec-registry/scripts/: upload-spec.sh
spec-registry/src/spec_registry/: __init__.py  cli.py  handler.py  indexer.py  matcher.py  storage.py  storage_s3.py
spec-registry/tests/: __init__.py  conftest.py  test_handler.py  test_indexer.py  test_matcher.py
workflow-analyzer/: CLAUDE.md  README.md  pyproject.toml
workflow-analyzer/src/workflow_analyzer/: analyzer.py  cli.py  handler.py
workflow-analyzer/src/workflow_analyzer/classifier/: node_classifier.py  payload_analyzer.py  registry.py
workflow-analyzer/tests/: __init__.py  conftest.py  test_analyzer.py  test_classifier.py  test_cli.py  test_expression_classifier.py  test_graph.py  test_models.py  test_parser.py  test_payload_analyzer.py  test_report.py
(+212 files in other folders)
