[project]
name = "phaeton-integration-tests"
version = "0.1.0"
description = "Cross-component integration tests for the Phaeton pipeline."
requires-python = ">=3.14"
dependencies = [
    "boto3==1.42.68",
    "phaeton-models",
    "workflow-analyzer",
    "n8n-to-sfn",
    "n8n-to-sfn-packager",
]

[tool.uv.sources]
phaeton-models = { path = "shared/phaeton-models", editable = true }
workflow-analyzer = { path = "workflow-analyzer", editable = true }
n8n-to-sfn = { path = "n8n-to-sfn", editable = true }
n8n-to-sfn-packager = { path = "packager", editable = true }

[tool.uv]
override-dependencies = [
    "phaeton-models @ file://${PROJECT_ROOT}/shared/phaeton-models",
]


[tool.ruff.lint]
select = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN", "BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
ignore = ["D203", "D211", "D212", "E501", "F403", "F405"]

fixable = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN", "BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"test_*" = ["S101", "S108"]

[tool.ty.environment]
python = ".venv"

[tool.ty.src]
exclude = [
    "n8n-release-parser/",
    "workflow-analyzer/",
    "n8n-to-sfn/",
    "packager/",
    "shared/",
    "deployment/",

]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that deploy to a real AWS account (require AWS credentials)",
    "performance: performance and load tests for large workflows (run with -m performance)",
]

[tool.coverage.run]
source = ["tests"]

[dependency-groups]
dev = [
    "coverage==7.13.4",
    "pytest==9.0.2",
    "pytest-timeout==2.4.0",
    "ruff==0.15.6",
    "ty==0.0.23",
    "types-boto3[stepfunctions]>=1.0.0",
]
