[project]
name = "phaeton-deployment"
version = "0.1.0"
description = "CDK deployment stacks for the Phaeton n8n-to-Step Functions pipeline."
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib==2.239.0",
    "constructs==10.5.1",
    "phaeton-models",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stacks"]

[tool.uv.sources]
phaeton-models = { path = "../shared/phaeton-models", editable = true }

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.2",
]

[tool.ruff.lint]
select = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN", "BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
ignore = ["D107", "D203", "D211", "D213", "E501", "F403", "F405"]

fixable = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN", "BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"test_*" = ["ANN201", "D102", "S101", "S108"]

[tool.pytest.ini_options]
testpaths = ["tests"]
