[project]
name = "phaeton-deployment"
version = "0.1.0"
description = "CDK deployment stacks for the Phaeton n8n-to-Step Functions pipeline."
requires-python = ">=3.14"
dependencies = [
    "aws-cdk-lib==2.243.0",
    "constructs==10.5.1",
    "phaeton-models",
]

[build-system]
requires = ["uv-build==0.10.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "stacks"
module-root = ""

[tool.uv.sources]
phaeton-models = { path = "../shared/phaeton-models", editable = true }

[dependency-groups]
dev = [
    "coverage==7.13.4",
    "pytest==9.0.2",
    "ruff==0.15.6",
    "ty==0.0.23",
]

[tool.ruff.lint]
select = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN", "BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
ignore = ["D107", "D203", "D211", "D212", "E501", "F403", "F405"]

fixable = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN", "BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"test_*" = ["ANN201", "D102", "S101", "S108"]

[tool.ty.environment]
python = ".venv"

[tool.ty.src]
exclude = ["functions/", "cdk.out/"]

[tool.ty.rules]
invalid-argument-type = "ignore"  # CDK/JSii: ty cannot resolve Function → IFunction inheritance

[tool.pytest.ini_options]
testpaths = ["tests"]
