[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n8n-release-parser"
version = "0.1.0"
description = "Versioned catalog of n8n node types with API spec matching"
requires-python = ">=3.14"
dependencies = [
    "boto3==1.42.54",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "pyyaml==6.0.3",
    "rapidfuzz==3.14.3",
    "typer==0.24.1",
]

[dependency-groups]
dev = [
    "coverage==7.13.4",
    "moto==5.1.21",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "respx==0.22.0",
    "ruff==0.15.2",
    "ty==0.0.18",
    "types-boto3==1.42.54",
]

[project.scripts]
n8n-release-parser = "n8n_release_parser.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN", "BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
ignore = ["D203", "D211", "D212", "E501", "F403", "F405"]
fixable = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN", "BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"test_*" = ["S101", "S108"]
"conftest.py" = ["S101", "S108"]

[tool.hatch.build.targets.wheel]
packages = ["src/n8n_release_parser"]
