[project]
name = "n8n-to-sfn-packager"
version = "0.1.0"
description = "Packager that generates deployable CDK applications from translated n8n workflows."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aws-cdk-lib==2.243.0",
    "constructs==10.5.1",
    "jsonschema==4.26.0",
    "pydantic==2.12.5",
    "typer==0.24.1",
]

[build-system]
requires = ["uv-build==0.10.10"]
build-backend = "uv_build"

[tool.ruff.lint]
# Rules listed at https://github.com/charliermarsh/ruff#supported-rules
select = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
ignore = ["D203", "D211", "D212", "E501", "F403", "F405"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"test_*" = ["S101", "S108"]

[tool.ty.environment]
python = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/n8n_to_sfn_packager"]

[dependency-groups]
dev = [
    "coverage==7.13.4",
    "pytest==9.0.2",
    "ruff==0.15.6",
    "ty==0.0.23",
]
